# jngl-clay

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: clay_renderer_jngl.hpp
src/: full-example.cpp  main.cpp  transitions.cpp
